<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sity">Kharkiv</string>
    <string name="temp_sample">20°C</string>
    <string name="time_sample">20.07.2023 13:00</string>
    <string name="sunny_sample">Sunny</string>
    <string name="min_max_temp_sample">34°C/13°C</string>
    <string name="button_hours">HOURS</string>
    <string name="button_days">DAYS</string>
</resources>